<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="82dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:background="#00000000"
                        android:contentDescription="@string/back_to_menu"
                        android:onClick="goToMenu"
                        android:scaleType="fitXY"
                        android:src="@drawable/backarrow" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewFoodDiarySettingsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_diary"
                        android:textAlignment="center"
                        android:textSize="36sp" />

                    <EditText
                        android:id="@+id/editTextCalorieTarget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/calorie_target"
                        android:inputType="number"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBMICalculatorSettingsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_calculator"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <RadioGroup
                    android:id="@+id/radioGroupBMI"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@id/radioButtonMetric"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMetric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/metric" />

                    <RadioButton
                        android:id="@+id/radioButtonImperial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:text="@string/imperial" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>